my portfolio website

--- a/about.html
+++ b/about.html
@@ -366,7 +366,7 @@
                         <!--/.col-md-4-->
                     </div>
                 </div>
-                <div class="experience">
+                <!--<div class="experience">
                     <div class="col-sm-6 col-xs-12">
                         <div
                             class="our-skills wow fadeInLeft"
@@ -464,7 +464,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--Features-Section-Start-->
         <!--<section id="features">
             <div class="container">
